home page made successfully

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,53 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.sidebar {
+  @apply bg-white fixed top-0 h-screen pt-20 pl-[2%];
+  width: 15%;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+.shortcut-links img {
+  @apply w-5 mr-5;
+}
+
+.side-link {
+  @apply flex items-center mb-5 cursor-pointer w-fit flex-wrap;
+}
+
+.sidebar hr {
+  @apply border-0 h-px bg-gray-300 w-[85%];
+}
+
+.subscribed-list h3 {
+  @apply text-sm my-5 text-gray-500;
+}
+
+.subscribed-list img {
+  @apply w-6 rounded-full mr-5;
+}
+
+.small-sidebar {
+  @apply w-[5%];
+}
+
+.small-sidebar p {
+  @apply hidden;
+}
+
+.small-sidebar h3 {
+  @apply hidden;
+}
+
+.small-sidebar hr {
+  @apply w-[50%] mb-6;
+}
+
+.side-link.active img {
+  @apply pb-0.5 border-b-4 border-red-500;
+}
+
+@media (max-width: 900px) {
+  .sidebar {
+    @apply hidden;
   }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
 }
