--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .sidebar {
-  @apply bg-white fixed top-0 h-screen pt-20 pl-[2%];
+  @apply hidden md:block bg-white fixed top-0 h-screen pt-20 pl-[2%];
   width: 15%;
 }
 
@@ -47,8 +47,4 @@
   @apply pb-0.5 border-b-4 border-red-500;
 }
 
-@media (max-width: 900px) {
-  .sidebar {
-    @apply hidden;
-  }
-}
+
